--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.90",
 	"appid": "wx15bc903bd3ce9d4a",
-	"projectname": "%E9%B1%BC%E4%B9%90%E8%B4%9D%E8%B4%9D",
+	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%A4%87%E4%BB%BD",
 	"svr": "",
 	"client": "",
 	"qcloudRoot": "",
@@ -34,18 +34,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
 					"name": "门店详情",
 					"pathName": "pages/index/detail/detail",
-					"query": "shopId=760"
+					"query": "shopId=362"
 				},
 				{
 					"id": 1,
-					"name": "服务列表",
-					"pathName": "pages/serve/serve",
+					"name": "服务详情",
+					"pathName": "pages/serve/serve-details/serve-details",
 					"query": ""
 				},
 				{
@@ -161,6 +161,12 @@
 					"name": "分享页面",
 					"pathName": "pages/activity/detail/detail",
 					"query": "shopId=197"
+				},
+				{
+					"id": 21,
+					"name": "核对订单",
+					"pathName": "pages/index/detail/activity/checkOrder/checkOrder",
+					"query": "shopId=362"
 				}
 			]
 		}
