删除欢乐送活动

--- a/app.json
+++ b/app.json
@@ -17,11 +17,8 @@
     "pages/serve/serve-details/serve-details",
     "pages/index/detail/appointment/appointment",
     "pages/serve/serve-reward/serve-reward",
-    "pages/serve/serve-evaluate/serve-evaluate",
-    "pages/user/prize/prize",
-    "pages/activity/index/index",
-    "pages/activity/detail/detail",
-    "pages/activity/activity"
+    "pages/serve/serve-evaluate/serve-evaluate"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
