修复日期显示不全

--- a/app.json
+++ b/app.json
@@ -48,14 +48,21 @@
         "selectedIconPath": "assets/images/xym_select_icon.png",
         "iconPath": "assets/images/xym_icon.png",
         "pagePath": "pages/fishCode/fishCode",
+         
         "text": "小鱼码"
       },
       {
         "selectedIconPath": "assets/images/tabbar-baby-active.png",
         "iconPath": "assets/images/tabbar-baby.png",
         "pagePath": "pages/user/user",
-        "text": "我的"
-      }
+        "text": "我的" 
+        }
     ]
+      
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示" 
+    }
   }
 }
