--- a/app.json
+++ b/app.json
@@ -18,7 +18,6 @@
     "pages/index/detail/appointment/appointment",
     "pages/serve/serve-reward/serve-reward",
     "pages/serve/serve-evaluate/serve-evaluate"
-
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -48,25 +47,23 @@
         "selectedIconPath": "assets/images/xym_select_icon.png",
         "iconPath": "assets/images/xym_icon.png",
         "pagePath": "pages/fishCode/fishCode",
-         
         "text": "小鱼码"
       },
       {
         "selectedIconPath": "assets/images/tabbar-baby-active.png",
         "iconPath": "assets/images/tabbar-baby.png",
         "pagePath": "pages/user/user",
-        "text": "我的" 
-        }
+        "text": "我的"
+      }
     ]
-      
   },
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示" 
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   },
-    "navigateToMiniProgramAppIdList": [
-      "wxce6688718ef525db"
-    ]
- 
+  "navigateToMiniProgramAppIdList": [
+    "wxce6688718ef525db"
+  ],
+  "sitemapLocation": "sitemap.json"
 }
